--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -3,8 +3,7 @@
   <section class="hero-section">
     <div class="hero-content">
       <h1 class="hero-title">Simplify Your Finances with Spendwise</h1>
-      <p class="hero-subtitle">
-        Effortlessly track expenses and gain insights—all in one place.</p>
+      <p class="hero-subtitle">Effortlessly track expenses and gain insights—all in one place.</p>
       <div class="hero-cta">
         <button class="action-btn signup-btn" (click)="goToSignup()">Get Started</button>
         <button class="action-btn signin-btn" (click)="goToSignin()">Sign In</button>
