--- a/frontend/src/app/components/toast/toast.component.html
+++ b/frontend/src/app/components/toast/toast.component.html
@@ -2,13 +2,14 @@
   <div
     *ngFor="let toast of toasts"
     class="toast"
+    role="alert"
     [ngClass]="toast.type"
     #toastElement
     [style.--progress-duration]="(toast.duration ?? 3000) + 'ms'"
   >
     <div class="toast-content">
       <span class="toast-message">{{ toast.message }}</span>
-      <button class="close-btn" (click)="closeToast(toast)" title="Close">
+      <button class="close-btn" (click)="closeToast(toast)" title="Close" aria-label="Close notification">
         <span>×</span>
       </button>
     </div>
